--- a/app/src/main/res/layout/fragment_game.xml
+++ b/app/src/main/res/layout/fragment_game.xml
@@ -179,9 +179,11 @@
                 android:background="#44887744"
                 android:layout_height="1dp" />
             <LinearLayout
+                android:id="@+id/test_version"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="horizontal"
+                android:background="@drawable/button_bg"
                 android:padding="10dp">
 
                 <ImageView
@@ -197,7 +199,7 @@
 
 
                 <TextView
-                    android:id="@+id/text_4"
+                    android:id="@+id/version"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
